revision for v1.0 production release

--- a/run/00_test/Makefile
+++ b/run/00_test/Makefile
@@ -1,20 +1,32 @@
-##################################
-DOP_HOME     := $(realpath $(PWD)/../../..)
-PATH         := $(PATH):$(DOP_HOME)/dvc/bin
-
-SVN_ROOT     := $(realpath $(PWD)/..)/PROJ_SVN
+####################################################################
+#SVN_ROOT     := $(HOME)/proj_svn
 SVN_URL      := file://$(SVN_ROOT)
+####################################################################
 
-##################################
 DESIGN_PROJT := testcase
 DESIGN_PHASE := P1-trial
 DESIGN_BLOCK := chip
-DESIGN_STAGE := 400-APR
+DESIGN_STAGE := 520-STA
 DESIGN_VERSN := 2017_0615-xxx
-DESIGN_CONTR := place_opt
+DESIGN_CONTR := ttt_0p80V_25C_rctyp
 
-TEST_FILE    := testfile
-TEST_DIR_    := testdir
 
-include $(DOP_HOME)/dvc/etc/make/test.make
+# The following file/dir in working dir will be checkin to container
+OBJECT_FILES := design.sdf sta.log
+OBJECT_FOLDER:= report/
+OBJECT_LINKS := design.spef
 
+# The following files in .container will be added to the repo
+ADD_OBJECTS  := 
+
+# The following files in .container will be added to the repo
+DEL_OBJECTS  := 
+
+#
+RENAME_PAIR  :=
+
+####################################################################
+
+include ../../etc/make/checkin.make
+
+####################################################################
