enhance container capability

--- a/run/00_test/Makefile
+++ b/run/00_test/Makefile
@@ -10,20 +10,16 @@ DESIGN_STAGE := 520-STA
 DESIGN_VERSN := 2017_0615-xxx
 DESIGN_CONTR := ttt_0p80V_25C_rctyp
 
-
-# The following file/dir in working dir will be checkin to container
-OBJECT_FILES := design.sdf sta.log
-OBJECT_FOLDER:= report/
+# The following object will be checkin to container
+OBJECT_FILES := design.v run_sta.log
+OBJECT_FOLDER:= report/  cache/
 OBJECT_LINKS := design.spef
 
-# The following files in .container will be added to the repo
-ADD_OBJECTS  := 
+# The following files in .container will be added to repo
+ADD_OBJECTS  := design.sdf
 
-# The following files in .container will be added to the repo
-DEL_OBJECTS  := 
-
-#
-RENAME_PAIR  :=
+# The following files in .container will be removed from repo
+DEL_OBJECTS  := cache/
 
 ####################################################################
 
