--- a/run/01_svn/Makefile
+++ b/run/01_svn/Makefile
@@ -13,20 +13,16 @@ DESIGN_STAGE := 400-APR
 DESIGN_VERSN := 2017_0615-xxx
 DESIGN_CONTR := place_opt
 
-# The following file/dir in working dir will be checkin to container
-OBJECT_FILES := design.def  apt.log 
-OBJECT_DIRS  := report/
+# The following object will be checkin to container
+OBJECT_FILES := design.def  run_apr.log 
+OBJECT_DIRS  := report/ cache/
 OBJECT_LINKS := design.spef
 
-# The following files in .container will be added to the repo
-ADD_OBJECTS  := 
+# The following files in .container will be added to repo
+ADD_OBJECTS  := design.v
 
-# The following files in .container will be added to the repo
-DEL_OBJECTS  := 
-
-#
-RENAME_PAIR  :=
-
+# The following files in .container will be removed from repo
+DEL_OBJECTS  := cache/
 
 ####################################################################
 
