enhance checkout mode

--- a/run/00_test/Makefile
+++ b/run/00_test/Makefile
@@ -22,7 +22,8 @@ ADD_OBJECTS  := design.sdf
 DEL_OBJECTS  := cache/
 
 ####################################################################
-
+# The following makefile template is required
+####################################################################
+ 
 include ../../etc/make/checkin.make
 
-####################################################################
