fix svn server auth issue

--- a/etc/conf/svnserve.conf
+++ b/etc/conf/svnserve.conf
@@ -1,16 +1,16 @@
 # Default conf of SVN server
 
 [general]
-realm = Design Operation Platform Repository
+realm = Design Version Control Repository
 anon-access = write
 auth-access = write
 password-db = passwd
 authz-db = authz
-groups-db = groups
-force-username-case = yes
-hooks-env = hooks-env
-store-passwords = no
-store-auth-creds = no
+#groups-db = groups
+#force-username-case = yes
+#hooks-env = hooks-env
+#store-passwords = no
+#store-auth-creds = no
 
 [sasl]
 # use-sasl = true
