--- a/run/00_test/Makefile
+++ b/run/00_test/Makefile
@@ -1,7 +1,7 @@
 PATH         :=	../../bin:$(PATH)
 ####################################################################
 SVN_ROOT     := $(HOME)/proj_svn
-SVN_URL      := file://$(SVN_ROOT)
+SVN_URL      = file://$(SVN_ROOT)
 ####################################################################
 
 DESIGN_PROJT := testcase
