--- a/run/01_svn/Makefile
+++ b/run/01_svn/Makefile
@@ -2,9 +2,16 @@ PATH         :=	../../bin:$(PATH)
 ##################################
 SVN_ROOT     := $(HOME)/proj_svn
 SVN_MODE     := svn
-#SVN_HOST     := `hostname`
-#SVN_PORT     := 3691
+SVN_HOST     := `hostname`
+#SVN_PORT     := 3690
 #SVN_URL      := svn://$(SVN_HOST):$(SVN_PORT)
+
+####################################################################
+# The follwing parameter are checkout pointer configuration.
+# Do not change it unless you need to
+CURR_PROJT   := :project
+CURR_VERSN   := :version
+CURR_CONTR   := :container
 
 ##################################
 DESIGN_PROJT := testcase
@@ -19,12 +26,16 @@ OBJECT_FILES := design.def  run_apr.log
 OBJECT_DIRS  := report/ .cache/
 OBJECT_LINKS := design.spef
 
-# The following files in .container will be added to repo
+# The following files in :container will be added to repo
+# Remember that you have to copy them to :container/ first
 ADD_OBJECTS  := design.v
 
 # The following files in .container will be removed from repo
 DEL_OBJECTS  := .cache/
 
+
+####################################################################
+# The following makefile template is required
 ####################################################################
 
 include ../../etc/make/checkin.make
