enhance for customized server setting

--- a/run/00_test/Makefile
+++ b/run/00_test/Makefile
@@ -7,16 +7,19 @@ SVN_MODE     := file
 ####################################################################
 # The follwing parameter are checkout pointer configuration.
 # Do not change it unless you need to
-CURR_PROJT   := :project
-CURR_VERSN   := :version
-CURR_CONTR   := :container
+CURR_PROJT   := :
+#CURR_PHASE   := :phase
+CURR_BLOCK   := :block
+CURR_STAGE   := :stage
+#CURR_VERSN   := :version
+#CURR_CONTR   := :container
 
 ####################################################################
 DESIGN_PROJT := testcase
 DESIGN_PHASE := P1-trial
 DESIGN_BLOCK := chip
 DESIGN_STAGE := 520-sta
-DESIGN_VERSN := 2017_0615-xxx
+DESIGN_VERSN := 2017_0620-xxx
 DESIGN_CONTR := ttt_0p80V_25C_rctyp
 
 # The following object will be checkin to container
