--- a/run/01_case/Makefile
+++ b/run/01_case/Makefile
@@ -5,3 +5,10 @@ clean:
 	rm -fr :
 	rm -fr :version
 	rm -fr .dop	
+
+report:
+	dvc_init_project_index
+	dvc_init_phase_index
+	dvc_init_block_index
+	dvc_init_stage_index
+	dvc_init_version_index
