refine report format

--- a/run/04_dqi/Makefile
+++ b/run/04_dqi/Makefile
@@ -1,11 +1,15 @@
 run: clean
-	./run.csh
+	script/run.csh
+
+checkout:
+	script/checkout.csh
+	
+index:
+	dvc_init_report
 
 clean:
 	rm -fr ~/.proj_svn
-	rm -fr :
+	rm -fr : :*
 	rm -fr :version
 	rm -fr .dop	
 
-index:
-	dvc_init_report
