change CURR_PROJT to PROJT_ROOT

--- a/run/02_file/Makefile
+++ b/run/02_file/Makefile
@@ -7,7 +7,7 @@ SVN_MODE     := file
 ####################################################################
 # The follwing parameter are checkout pointer configuration.
 # Do not change it unless you need to
-CURR_PROJT   := :
+PROJT_ROOT   := :
 CURR_PHASE   := :phase
 CURR_BLOCK   := :block
 CURR_STAGE   := :stage
