add create_design/checkout_design/checkin_design command

--- a/run/01_case/Makefile
+++ b/run/01_case/Makefile
@@ -7,8 +7,5 @@ clean:
 	rm -fr .dop	
 
 index:
-	dvc_init_project_index
-	dvc_init_phase_index
-	dvc_init_block_index
-	dvc_init_stage_index
-	dvc_init_version_index
+	dvc_refresh_index
+	
