refine the plugin testcasce

--- a/run/06_plugin/Makefile
+++ b/run/06_plugin/Makefile
@@ -4,17 +4,15 @@ help: plugin
 
 design:
 	dvc_create_project testcase
-	dvc_create_design P1-trail/chip/520-sta/2017_0914-xxx
+	dvc_create_design P1-trial/block/520-sta/2017_0914-xxx
 	dvc_checkout_design
 
-import check run save html :
+import check run save html view:
 	make -f plugin/Makefile $@
 
-
-plugin:
-	rm -f plugin
-	ln -s 520-sta plugin
-
+checkin:
+	dvc_checkin_design
 
 clean:
-	rm -fr : :* .dop
+	rm -fr : :* .dop DQI.rpt DESIGN_FILES
+
