refine report command to dvc_report_*

--- a/run/04_sta/Makefile
+++ b/run/04_sta/Makefile
@@ -13,12 +13,12 @@ list:
 	dvc_list_design
 
 html:
-	dvc_report_version --html plugin/html
+	dvc_report_version 
 	
 index:
 	dvc_refresh_index
 
 clean:
-	rm -fr : :*
+	rm -fr : :* .dop
 	rm -f index.htm
 	
