add 0test regression to 02_file/03_svn testcase

--- a/run/01_case/Makefile
+++ b/run/01_case/Makefile
@@ -1,11 +1,11 @@
 run: clean
 	./run.csh
 
+index:
+	dvc_report_index
+	
 clean:
 	rm -fr :
 	rm -fr :*
 	rm -fr .dop	
 
-index:
-	dvc_refresh_index
-	
