change default PROJT_ROOT to _

--- a/run/01_case/Makefile
+++ b/run/01_case/Makefile
@@ -5,7 +5,7 @@ index:
 	dvc_report_index
 	
 clean:
-	rm -fr :
-	rm -fr :*
+	rm -fr _
+	rm -fr .phase .block .stage .version .container
 	rm -fr .dop	
 
