--- a/run/04_sta/Makefile
+++ b/run/04_sta/Makefile
@@ -19,6 +19,7 @@ index:
 	dvc_report_index
 
 clean:
-	rm -fr : :* .dop
+	rm -fr _ .dop
+	rm -f .phase .block .stage .version .container
 	rm -f index.htm
 	
