create .htm directory before copy index.css

--- a/run/05_apr/Makefile
+++ b/run/05_apr/Makefile
@@ -1,6 +1,6 @@
 help:
 	@echo "Usage:   make run"
-	@echo "         make refresh"
+	@echo "         make html"
 	@echo "         make clean"
 
 run: 
