--- a/run/03_svn/Makefile
+++ b/run/03_svn/Makefile
@@ -2,22 +2,21 @@ PATH         :=	../../bin:$(PATH)
 ##################################
 SVN_ROOT     := $(HOME)/proj_svn
 SVN_MODE     := svn
-#SVN_HOST     := $(shell hostname)
-#SVN_PORT     := 3690
-#SVN_URL      := svn://$(SVN_HOST):$(SVN_PORT)
+SVN_HOST     := $(shell hostname)
+SVN_PORT     := 3690
 
 ####################################################################
 # The follwing parameter are checkout pointer configuration.
 # Do not change it unless you need to
-PROJT_ROOT  := _
-PTR_PHASE   := :phase
-PTR_BLOCK   := :block
-PTR_STAGE   := :stage
-PTR_VERSN   := :version
-PTR_CONTR   := :container
+#PROJT_ROOT  := _
+#PTR_PHASE   := :phase
+#PTR_BLOCK   := :block
+#PTR_STAGE   := :stage
+#PTR_VERSN   := :version
+#PTR_CONTR   := :container
 
 ##################################
-DESIGN_PROJT := testcase
+DESIGN_PROJT := 03-svn
 #---------------------------------
 DESIGN_PHASE := P1-trial
 DESIGN_BLOCK := chip
