define PROJT_ROOT

--- a/run/03_svn/Makefile
+++ b/run/03_svn/Makefile
@@ -8,7 +8,6 @@ SVN_PORT     := 3690
 ####################################################################
 # The follwing parameter are checkout pointer configuration.
 # Do not change it unless you need to
-#PROJT_ROOT  := _
 #PTR_PHASE   := :phase
 #PTR_BLOCK   := :block
 #PTR_STAGE   := :stage
@@ -16,6 +15,7 @@ SVN_PORT     := 3690
 #PTR_CONTR   := :container
 
 ##################################
+PROJT_ROOT   := _
 DESIGN_PROJT := 03-svn
 #---------------------------------
 DESIGN_PHASE := P1-trial
