refine testcase run directory

--- a/run/Makefile
+++ b/run/Makefile
@@ -1,7 +1,14 @@
-CASE	:= 01_case 02_file 03_svn 04_sta 05_apr 06_plugin
+CASE	:= 01_case 02_file 03_svn 04_sta 05_apr 
 
-run clean:
+run index:
 	@for dir in $(CASE) ; do \
 	  (echo ""; cd $$dir ; make $@); \
 	done	
+
+clean:
+	@for dir in $(CASE) ; do \
+	  (echo ""; cd $$dir ; make $@); \
+	done	
+	rm -fr svn_root
+
 
