--- a/run/03_svn/Makefile
+++ b/run/03_svn/Makefile
@@ -1,18 +1,18 @@
 PATH         :=	../../bin:$(PATH)
 ##################################
-SVN_ROOT     := $(HOME)/proj_svn
+SVN_ROOT     := ../svn_root
 SVN_MODE     := svn
 SVN_HOST     := $(shell hostname)
-SVN_PORT     := 3690
+SVN_PORT     := 3693
 
 ####################################################################
 # The follwing parameter are checkout pointer configuration.
 # Do not change it unless you need to
-#PTR_PHASE   := :phase
-#PTR_BLOCK   := :block
-#PTR_STAGE   := :stage
-#PTR_VERSN   := :version
-#PTR_CONTR   := :container
+PTR_PHASE   := :phase
+PTR_BLOCK   := :block
+PTR_STAGE   := :stage
+PTR_VERSN   := :version
+PTR_CONTR   := :container
 
 ##################################
 PROJT_ROOT   := _
