stop svn server before cleaning up db

--- a/run/Makefile
+++ b/run/Makefile
@@ -1,7 +1,15 @@
 CASE	:= 01_case 02_file 03_svn 04_sta 05_apr
 
-run clean:
+run html index:
 	@for dir in $(CASE) ; do \
 	  (echo ""; cd $$dir ; make $@); \
 	done	
+
+clean:
+	dvc_init_server stop
+	@for dir in $(CASE) ; do \
+	  (echo ""; cd $$dir ; make $@); \
+	done
+	rm -fr svn_root
+	
 
