--- a/run/02_file/Makefile
+++ b/run/02_file/Makefile
@@ -13,7 +13,7 @@ PTR_VERSN   := :version
 PTR_CONTR   := :container
 
 ####################################################################
-PROJT_ROOT   := _
+PROJT_BASE   := _
 DESIGN_PROJT := 02_file
 #----------------------------------
 DESIGN_PHASE := P1-trial
