revise testcsae to fit 2017_1025 release

--- a/run/01_case/Makefile
+++ b/run/01_case/Makefile
@@ -1,14 +1,21 @@
 run: clean
-	./run.csh
+	mkdir -p output
+	./run.csh | tee run.log
+	grep -v "TIME:" run.log > output/run.log
 
 list:
 	dvc_list_design
-	
-report:
-	dvc_init_report
-	
+
+tree: golden
+	tree _ | tee output/tree.log
+		
+diff: tree
+	@diff -r output golden | tee diff.log
+	@echo "============================="
+	@wc -l diff.log
 clean:
 	rm -f :phase :block :stage :version :container
-	rm -fr _ .dop	
-	rm -fr svn_root testcase
+	rm -fr .dop _ svn_root testcase
+	rm -fr output diff.log run.log
+	
 
