--- a/run/02_file/Makefile
+++ b/run/02_file/Makefile
@@ -1,6 +1,6 @@
 PATH         :=	../../bin:$(PATH)
 ####################################################################
-SVN_ROOT     := $(DVC_HOME)/run/svn_root
+SVN_ROOT     := svn_root
 SVN_MODE     := file
 
 ####################################################################
