--- a/run/04_sta/Makefile
+++ b/run/04_sta/Makefile
@@ -4,13 +4,25 @@ help:
 	@echo "		make clean"
 
 run: 
-	script/run.csh
+	mkdir -p log
+	script/run.csh 2| tee run.log
 
 checkout:
 	script/checkout.csh
 
 list:
-	dvc_list_design
+	dvc_list_project --recursive
+
+log/list.log:
+	make list > log/list.log	
+tree:	
+	dvc_list_design --recursive
+
+log/tree.log:
+	make tree > log/tree.log
+
+diff: log/list.log log/tree.log
+	diff -r log golden | tee diff.log
 	
 index:
 	dvc_init_report
@@ -19,7 +31,7 @@ view:
 	firefox	index.htm &
 		
 clean:
-	rm -fr .dop _
+	dvc_remove_project 04_sta
+	rm -fr .dop log _
 	rm -f :phase :block :stage :version :container
-	rm -f index.htm index.ccs run.log
-	
+	rm -f index.htm index.ccs run.log diff.log
