support dvc_get_system to return DOP version, write version to dvc db

--- a/run/01_case/Makefile
+++ b/run/01_case/Makefile
@@ -1,21 +1,21 @@
 run: clean
-	mkdir -p output
+	mkdir -p log
 	./run.csh | tee run.log
-	grep -v "TIME:" run.log > output/run.log
+	grep -v "TIME:" run.log > log/run.log
 
 list:
 	dvc_list_design
 
 tree: golden
-	tree _ | tee output/tree.log
+	tree _ | tee log/tree.log
 		
 diff: tree
-	@diff -r output golden | tee diff.log
+	@diff -r log golden | tee diff.log
 	@echo "============================="
 	@wc -l diff.log
 clean:
 	rm -f :phase :block :stage :version :container
 	rm -fr .dop _ svn_root testcase
-	rm -fr output diff.log run.log
+	rm -fr log diff.log run.log
 	
 
