--- a/run/Makefile
+++ b/run/Makefile
@@ -1,6 +1,6 @@
 CASE	:= 01_case 02_file 03_svn 04_sta 05_apr 
 
-run index:
+run:
 	@for dir in $(CASE) ; do \
 	  (echo ""; cd $$dir ; make $@); \
 	done	
